SERVER-38063 Fail cleanly on execution-level explain of $out pipeline.